# VeriWorld

./: .gitignore  LICENSE  NOTICE.md  README.md  model_configs.example.json  probe_video.py  pyproject.toml  run_defaults.example.json
docs/: ACCESS.md  FORM_TEMPLATE.md  MODELS.md  create_access_form.gs
example_starters/: README.md
example_starters/mazenavfps/harness_knowledge/: 2_run_vp_bf.bat
example_starters/mazenavfps/harness_structured/: 1_launch_ue.bat  2_run_pv_bf.bat  2_run_vp_bf.bat
example_starters/strategy/maze_plan/harness_knowledge/: 2_run_pv_kn.bat
example_starters/surface_billiards/: run.bat
example_starters/tunnel/harness_structured/: 1_launch_ue.bat  2_run_af.bat  2_run_vp_bf.bat
veriworld/: __init__.py
veriworld/benchmark/: README.md
veriworld/benchmark/computational/: README.md
veriworld/benchmark/computational/coding/: README.md
veriworld/benchmark/interactive/: README.md
veriworld/benchmark/interactive/navigation/: README.md
veriworld/benchmark/interactive/strategy/: README.md
veriworld/common/: __init__.py  logger.py  screenshot.py  vlm.py  ws.py
veriworld/infra/: README.md
veriworld/infra/computational/: engine.py  task_template.py
veriworld/infra/harness/: SKILL.md
veriworld/infra/interactive/: engine.py  task_template.py
veriworld/infra/lean/: SKILL.md  api.md
veriworld/infra/lean/examples/: hello_world.lean
veriworld/infra/slang/: SKILL.md  api.md
veriworld/infra/slang/examples/: physics_skeleton.slang  trivial_kernel.slang
veriworld/scripts/: __init__.py  launch_ue.py  run_parallel.py
(+85 files in other folders)
