[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veriworld"
version = "0.1.0"
description = "VeriWorld — a benchmark for Symbolic Spatial Intelligence in vision-language models, built on a customized Unreal Engine environment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [
    { name = "Yan Zheng", email = "yan.zheng.mat@gmail.com" },
]
keywords = ["benchmark", "vision-language-models", "spatial-reasoning", "unreal-engine", "ssi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websockets>=12.0",
    "requests>=2.31",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/yanyanzheng96/VeriWorld"
Issues = "https://github.com/yanyanzheng96/VeriWorld/issues"

[tool.setuptools.packages.find]
include = ["veriworld*"]

[tool.setuptools.package-data]
veriworld = [
    "infra/**/*.md",
    "infra/**/examples/*",
    "benchmark/**/*.md",
    "benchmark/**/*.json",
]
